--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,7 +23,7 @@ subject: My Email Templates
 
       <center>
         <menu class="vertical">
-          <item href="{{root}}basic.html" target="_blank">Basic Template</item>
+          <!-- <item href="{{root}}basic.html" target="_blank">Basic Template</item>
           <item href="{{root}}drip.html" target="_blank">Drip Template</item>
           <item href="{{root}}hero.html" target="_blank">Hero Template</item>
           <item href="{{root}}marketing.html" target="_blank">Marketing Template</item>
@@ -33,13 +33,11 @@ subject: My Email Templates
           <item href="{{root}}password.html" target="_blank">Password Template</item>
           <item href="{{root}}sidebar.html" target="_blank">Sidebar Template</item>
           <item href="{{root}}sidebar-hero.html" target="_blank">Sidebar Hero Template</item>
-          <item href="{{root}}welcome.html" target="_blank">Welcome Template</item>
+          <item href="{{root}}welcome.html" target="_blank">Welcome Template</item> -->
           <item href="{{root}}turbo-tax.html" target="_blank">turbo-tax</item>
           <item href="{{root}}myFico.html" target="_blank">myFico</item>
           <item href="{{root}}newegg.html" target="_blank">newegg</item>
           <item href="{{root}}newegg-two.html" target="_blank">newegg-two</item>
-          <item href="{{root}}apple-receipt.html" target="_blank">apple-receipt</item>
-          
         </menu>
       </center>
 
