completed two-boxs section

--- a/src/pages/turbo-tax.html
+++ b/src/pages/turbo-tax.html
@@ -5,7 +5,7 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="one-box">
-    <columns class="big-one" small="12" large="12">
+    <columns class="hero" small="12" large="12">
       <img
         src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F5fb73961f5d16775376df1fe%2Foriginal.gif%3F1605843297&t=1637970491&ymreqid=ed8b9e6a-da10-874f-1c61-2d0002012c00&sig=opvyugotQGi2TaqgFOA8tQ--~D"
         style="width: 600px; height: 35px"
@@ -15,17 +15,22 @@ subject: Newsletter fall 2021
         ><img
           src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F6127c93f6088181263b1ac33%2Foriginal.jpg%3F1629997375&t=1635285952&ymreqid=ed8b9e6a-da10-874f-1c76-670000014500&sig=9bu2QunnyDVYzKe..MiQ9g--~D"
       /></a>
-      <p class="one-box_p">
-        Learn what income, forms, deductions, and considerations you should keep
-        top of mind.
-      </p>
     </columns>
   </row>
+  <row class="one-box-text">
+    <columns class="hero-text" small="12" large="12">
+      <p>
+          Learn what income, forms, deductions, and considerations you should keep
+          top of mind.
+        </p>
+      </columns>
+  </row>  
+  
 </container>
 
 <container small="12" large="12">
   <row class="two-boxs">
-    <columns small="6" large="6" class="md-one">
+    <columns small="6" large="6" class="box-one">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -42,10 +47,10 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 10px 10px !important;
+            padding: 27px 10px !important;
           "
         >
-          <p class="title">5 Hidden Ways to Boost Your Tax Refund Now</p>
+          <p class="title">5 Hidden Ways to Boost Your Tax <br> Refund Now</p>
           <p class="info">
             Don't forget these 5 tips to reduce your taxes at tax time. Increase
             your refund or pay less taxes.
@@ -57,7 +62,7 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="6" large="6" class="md-two">
+    <columns small="6" large="6" class="box-two">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -73,13 +78,13 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 10px 10px !important;
+            padding: 25px 10px 47px !important;
           "
         >
           <p class="title">Free Bonus Tax Calculator</p>
           <p class="info">
             Get an estimate of how much federal taxes will be withheld from your
-            bonuses when you receive them.
+            bonuses when you <br> receive them.
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv4LZV6hCbBo4vHXpTxLsLBSzyr9RMrIrCnnQ-2ByPDHomWH1s5znPuvYmgSTDOzJz0c7olgZFDS7aVfU1OwRKr5732avZ-2ByFSYZE2-2FMWkw-2F2nZ0MICjTyb7Ibn-2Bgp4ZFyyNmhAf6ZlcBzquRyteRS-2B2V7vfIh_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuXfaqgTzCyL36ZV7-2BZXa-2BTX1l3ARFQXkHq5EhmTh8uACJoSKtELrk7UVvxTpYvNhKYFsMRYV-2BNc-2BLzbZg1pQdAEZUpYsx1nMTdgC62Uh0yZf-2FjxHqM6sQtpUB-2Fgz-2FtQXxRUK1Dtrj8czslpu4I5nb7TuNGyNgof7HWjCa5nAiS2cA-3D-3D"
               >Get started</a
