--- a/src/pages/turbo-tax.html
+++ b/src/pages/turbo-tax.html
@@ -98,7 +98,7 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="three-boxs">
-    <columns small="3" large="3" class="sm-one">
+    <columns small="3" large="3" class="sm-one" style="padding-right: 0;">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -115,14 +115,14 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 10px 10px !important;
+            padding: 25px 10px 18px !important;
           "
         >
           <p class="title">
             When is Tax Season? How to Get Ahead Before it's Here
           </p>
           <p class="info">
-            Tax season is months away, but these tax moves will help you get
+            Tax season is months away, <br> but these tax moves will help you get
             ahead before it's here and maximize your tax refund next year.
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv4LZV6hCbBo4vHXpTxLsLBSOApuOHHM3WLpkIKZE5xxxLeb1ZOFdv6ag0dhNyDer-2BqfmGsDTKnOIxr4Xx3zahEPxtxqfA2c9HBa2pD87Y9FeN3myvbtUyVXaoWBcykh9U8GhZatxh0j3MMMvXWQHFJeLB26K6hC59ioCYz9vmArzYRXzBS7ptS1KGLV3xi-2BX3w-3DRdGi_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUDMUgrrH3iVIH4TES0rlBFhKljfzcPnDOqq90H5vkzJ94eOl03vexCsdvvM3Csr31JqbhMegtxvRJ-2BqgaJ6Q4xA3w4-2FQnl1hRanU73br6NVbwAMlOPZyYaA09-2FX8q1fXycFortVo2yWj7QTu-2FR4GZ6GizNpzc4BKjYoaYFCYQQTQ-3D-3D"
@@ -149,12 +149,12 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 10px 10px !important;
+            padding: 25px 10px 50px !important;
           "
         >
           <p class="title">7 Steps for Handling Unexpected Tax Bills</p>
           <p class="info">
-            Owe taxes? Don't worry, these 7 tips will help you pay your tax bill
+            Owe taxes? Don't worry, <br> these 7 tips will help you pay your tax bill
             and avoid one next year.
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f-2BXtkUu1fmoENfPqZwUcWmASVY10zQ5C-2F-2Br-2BCbA55HcVKX8bFl5lwg2MzFyerXCscyZWOldd5TXQ8RqeWhsVDkFIuqGx-2BEa58-2FJqGHvfvj1g2CHYl8Ytim1xMsvhYDRrUVWhbKdzBHgbooLjJQgbWwn2NyCYC7MB-2BIAOsaLnK6JUQ-2BoHM-2FZfh-2BnbeKExypOX5w-3D-3DgBUp_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuVlqysvvc4IceuMXGF4Xv3dnFfr1h8HJUAroPWTod26ipbm8RccEZISDBSNQcSVVFAooAyCea-2B4u37ecvofHnaZR2kzzvz5JDFKN9a02rM2n80DWkVYQ4-2BNTM7SltrX1JcBSfbBvZLAFfhcyRdMzFo99J2zCixU4rVTTNEmnDhGzw-3D-3D"
@@ -164,9 +164,9 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="3" large="3" class="sm-three">
+    <columns small="3" large="3" class="sm-three" style="padding-left: 0;">
       <row>
-        <columns style="padding-bottom: 0 !important">
+        <columns style="padding-bottom: 0 !important;">
           <a
             href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9fydTBmqZxV64qSnV-2BumPHr-2Fvd9EOdL8pmaUFMaD2w4Nm0inTtjA5sghUOMkpSLjCY55OxiR33NuRp4LocvUw2yyvCCDzTl1x8MGS4Y7JQJbGiYKcuyIB5-2FFyA3gGqCXKX7bY0h2WPVUPUj5Z-2Bdg0wkHxn3NVjbrd0keZHIhda-2BhaZHb-2BNvEFrSKB6JrW9Ehani69l2w4zT9Fsydl20AoIw59O-2FVimgo3Mmubn3GeQ5OZh9ax_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuXTWPt0QqiyKrp5wGK1ZQet-2Byv8vcUDAdkpvZpLEOkVpYUYNidyDeuhdVDnn762b3SenqXGjzPfU6V-2BnhkRz4AyyLMu6cFUytIbNwvgGlFFHVXHqXJKadVJ3KbMvD2l9FduOhX1nFXvqhoS-2F0DjnZmK7s-2BWEIh3SWmj3bsBCdp8dQ-3D-3D"
             ><img
@@ -181,14 +181,14 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 10px 10px !important;
+            padding: 25px 10px 31px !important;
           "
         >
           <p class="title">
             Get Free Answers from Live Tax Experts: Ask Me Anything
           </p>
           <p class="info">
-            Get answers from live tax
+            Get answers from live tax <br>
             experts on a variety of topics. Check out our community for
             upcoming events.
             <a
