completed long box section

--- a/src/pages/turbo-tax.html
+++ b/src/pages/turbo-tax.html
@@ -98,7 +98,7 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="three-boxs">
-    <columns small="3" large="3" class="sm-one" style="padding-right: 0;">
+    <columns small="3" large="3" class="sm-one" style="padding-right: 0; padding-bottom: 0;">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -132,7 +132,7 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="3" large="3" class="sm-two">
+    <columns small="3" large="3" class="sm-two" style="padding-bottom: 12px;">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -164,7 +164,7 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="3" large="3" class="sm-three" style="padding-left: 0;">
+    <columns small="3" large="3" class="sm-three" style="padding-left: 0; padding-bottom: 0;">
       <row>
         <columns style="padding-bottom: 0 !important;">
           <a
@@ -204,24 +204,27 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="long-box">
-    <columns small="3" large="4" class="long-one">
-      <a
-        href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv5OYazZUBlIPrFUsAqWMDhRVLHsXvyZC9GumpP4FD76c0swosD3m3tEB3Bz3RgpYJo765r1JdyPV3st5mrXMJZ4FGnOvxwsTSUWBFBZcvzLrg-3D-3DHJRD_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuW7i00nKe8dWR2rIIsa8iU4uOFeh4u3HXJPlnMMLc90oK8LJ25fbEHosX6Xs-2F1bIfZ8KdKmkW2A-2B5tNVbKLz9BrjeSFJGp0rCsrwzwpGv1XZlwL4O9fTNnajFv-2BoubMezUWx4QCg66-2F6xs9-2Ff9kDCDg1Uiu2jfVMDYYuC9WQLdw3w-3D-3D"
-        ><img
-          src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F6143cbe9bd89597f72376afc%2Foriginal.png%3F1631833064&t=1635699291&ymreqid=ed8b9e6a-da10-874f-1c58-1d0000010c00&sig=Snax6i1r6Kvc9hlkBJR3AA--~D"
-      /></a>
+    <columns>
+      <row>
+        <columns  class="long-one" style="padding-right: 0;padding-bottom: 0; width: 155px;">
+          <a
+            href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv5OYazZUBlIPrFUsAqWMDhRVLHsXvyZC9GumpP4FD76c0swosD3m3tEB3Bz3RgpYJo765r1JdyPV3st5mrXMJZ4FGnOvxwsTSUWBFBZcvzLrg-3D-3DHJRD_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuW7i00nKe8dWR2rIIsa8iU4uOFeh4u3HXJPlnMMLc90oK8LJ25fbEHosX6Xs-2F1bIfZ8KdKmkW2A-2B5tNVbKLz9BrjeSFJGp0rCsrwzwpGv1XZlwL4O9fTNnajFv-2BoubMezUWx4QCg66-2F6xs9-2Ff9kDCDg1Uiu2jfVMDYYuC9WQLdw3w-3D-3D"
+            ><img
+              src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F6143cbe9bd89597f72376afc%2Foriginal.png%3F1631833064&t=1635699291&ymreqid=ed8b9e6a-da10-874f-1c58-1d0000010c00&sig=Snax6i1r6Kvc9hlkBJR3AA--~D" style="width: 183px"
+          /></a>
+        </columns>
+        <columns  class="long-text" style="padding: 0 30px 0 10px; margin-right: 10px; width: 350px;">
+          <p class="title">Explore our Unemployment Center</p>
+          <p class="info">
+            Learn more about expanded unemployment benefits and<br />
+            Coronavirus relief.
+            <a
+              href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv5OYazZUBlIPrFUsAqWMDhRVLHsXvyZC9GumpP4FD76c0swosD3m3tEB3Bz3RgpYJo765r1JdyPV3st5mrXMJZ4FGnOvxwsTSUWBFBZcvzLrg-3D-3DLptM_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUlwpeCpFyxm20fTyo5QaQehtZEq4GN2edp9Ndyu107ArOK5yz2RjpOpuCx5UxfaEMSz2JXcAzKy90sN7HHDjJsxd2Tn2juQMJl1ZCyUGDpUPvH0MkNpSJS42pm314-2BAsN0PWMwGQJ0EZkNxXNvdRSudfGloPdQBMSD5S0XKa8bXw-3D-3D"
+              >Discover more</a
+            >
+          </p>
+        </columns>
+      </row>
     </columns>
-    <columns small="8" large="8" class="long-text">
-      <p class="title">Explore our Unemployment Center</p>
-      <p class="info">
-        Learn more about expanded unemployment benefits and<br />
-        Coronavirus relief.
-        <a
-          href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv5OYazZUBlIPrFUsAqWMDhRVLHsXvyZC9GumpP4FD76c0swosD3m3tEB3Bz3RgpYJo765r1JdyPV3st5mrXMJZ4FGnOvxwsTSUWBFBZcvzLrg-3D-3DLptM_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUlwpeCpFyxm20fTyo5QaQehtZEq4GN2edp9Ndyu107ArOK5yz2RjpOpuCx5UxfaEMSz2JXcAzKy90sN7HHDjJsxd2Tn2juQMJl1ZCyUGDpUPvH0MkNpSJS42pm314-2BAsN0PWMwGQJ0EZkNxXNvdRSudfGloPdQBMSD5S0XKa8bXw-3D-3D"
-          >Discover more</a
-        >
-      </p>
-    </columns>
-    <columns small="1" large="1" class="blank"></columns>
   </row>
 </container>
