completed footer section

--- a/src/pages/turbo-tax.html
+++ b/src/pages/turbo-tax.html
@@ -204,7 +204,7 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="long-box">
-    <columns>
+    <columns style="padding-bottom: 35px">
       <row>
         <columns  class="long-one" style="padding-right: 0;padding-bottom: 0; width: 155px;">
           <a
