fixed boxes styles

--- a/src/pages/turbo-tax.html
+++ b/src/pages/turbo-tax.html
@@ -47,7 +47,6 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 27px 10px !important;
           "
         >
           <p class="title">5 Hidden Ways to Boost Your Tax <br> Refund Now</p>
@@ -78,7 +77,6 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 25px 10px 47px !important;
           "
         >
           <p class="title">Free Bonus Tax Calculator</p>
@@ -115,7 +113,6 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 25px 10px 18px !important;
           "
         >
           <p class="title">
@@ -149,13 +146,12 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 25px 10px 50px !important;
           "
         >
           <p class="title">7 Steps for Handling Unexpected Tax Bills</p>
           <p class="info">
             Owe taxes? Don't worry, <br> these 7 tips will help you pay your tax bill
-            and avoid one next year.
+            and avoid one <br> next year.
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f-2BXtkUu1fmoENfPqZwUcWmASVY10zQ5C-2F-2Br-2BCbA55HcVKX8bFl5lwg2MzFyerXCscyZWOldd5TXQ8RqeWhsVDkFIuqGx-2BEa58-2FJqGHvfvj1g2CHYl8Ytim1xMsvhYDRrUVWhbKdzBHgbooLjJQgbWwn2NyCYC7MB-2BIAOsaLnK6JUQ-2BoHM-2FZfh-2BnbeKExypOX5w-3D-3DgBUp_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuVlqysvvc4IceuMXGF4Xv3dnFfr1h8HJUAroPWTod26ipbm8RccEZISDBSNQcSVVFAooAyCea-2B4u37ecvofHnaZR2kzzvz5JDFKN9a02rM2n80DWkVYQ4-2BNTM7SltrX1JcBSfbBvZLAFfhcyRdMzFo99J2zCixU4rVTTNEmnDhGzw-3D-3D"
               >Find out more</a
@@ -181,7 +177,6 @@ subject: Newsletter fall 2021
           style="
             background: #ffffff;
             background-color: #ffffff;
-            padding: 25px 10px 31px !important;
           "
         >
           <p class="title">
