--- a/src/pages/myFico.html
+++ b/src/pages/myFico.html
@@ -4,80 +4,79 @@ subject: Newsletter
 ---
 
 <container>
-  <row class="myFico_line collapse float-center" valign="middle">
-    <columns small="12" large="12">
-      <span class="blue-line"></span>
-    </columns>
+  <row class="myFico_line">
+    <columns class="blue-line"> </columns>
   </row>
 </container>
 
 <container>
-  <spacer size="20"></spacer>
   <row class="myFico_main-info">
-    <columns small="12" large="12">
+    <columns class="hero">
       <a
         href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fcredit-education%2Fblog%2Ffico-score-drop%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=reasonsdropficoscore/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/9MvApwBW-an8n1Jfxt-tknW0icw=239"
         ><img
           src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Feducation%2Fnewsletter%2Fscore-drop_600x300.jpg&t=1636392764&ymreqid=ed8b9e6a-da10-874f-1cce-7e000001bf00&sig=uJAn3V23.ilhBlPvE__Wrw--~D"
           class="float-center"
       /></a>
-      <spacer size="35"></spacer>
-      <span class="header">Is it Ever Ok to Let Your FICO® Score Drop?</span>
-      <spacer size="15"></spacer>
-      <span class="info"
-        >Your FICO Score is *so* important to your financial health, but
-        sometimes it might be a good idea to let your score drop. Find out
-        when.</span
-      >
-      <spacer size="10"></spacer>
+      <p class="title">Is it Ever Ok to Let Your FICO® Score Drop?</p>
+      <p class="info">
+        Your FICO Score is *so* important to your financial health, but
+        sometimes it might be a good idea to let your score drop. Find out when.
+      </p>
+    </columns>
+  </row>
+  <row class="myFico_main-button">
+    <columns>
       <a
         href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fcredit-education%2Fblog%2Ffico-score-drop%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=reasonsdropficoscore/2/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/CBr_h5wzmkwddp6XyBB0qFSaWVw=239"
-        ><p class="button">READ MORE</p></a
+        ><span class="button">READ MORE</span></a
       >
     </columns>
   </row>
-  <spacer size="20"></spacer>
 </container>
 
 <container>
-  <spacer size="20"></spacer>
   <row class="myFico_sub-info">
-    <columns small="12" large="12">
+    <columns class="left">
       <row>
-        <columns small="6" large="6" class="left collapse">
+        <columns class="left-info">
           <a
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fcredit-education%2Fblog%2Fget-rid-of-pmi%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=pmi/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/MT7tRljIrcmap3MzKT5vDdqRV2U=239"
             ><img
               src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Feducation%2Fnewsletter%2Fget-rid-of-pmi_290x150.jpg&t=1636392764&ymreqid=ed8b9e6a-da10-874f-1cce-7e000001bf00&sig=4xLo1RccLNS5CZgMLsm3yg--~D"
-              style="width: 290px !important"
           /></a>
-          <spacer size="20"></spacer>
-          <span style="color: #000000; font-size: 18px; font-weight: 600"
-            >How to Manage Your Money During Inflation</span
-          >
-          <spacer size="10"></spacer>
+          <p class="text">How to Manage Your Money During Inflation</p>
+        </columns>
+      </row>
+      <row>
+        <columns class="left-button">
           <a
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fcredit-education%2Fblog%2Ffico-score-drop%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=reasonsdropficoscore/2/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/CBr_h5wzmkwddp6XyBB0qFSaWVw=239"
-            ><p class="button">READ MORE</p></a
+            ><span class="button">READ MORE</span></a
           >
         </columns>
-
-        <columns small="6" large="6" class="right collapse">
+      </row>
+    </columns>
+    <columns class="right">
+      <row>
+        <columns class="right-info">
           <a
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fcredit-education%2Ffaq%2Fimproving-a-score%2Fsurviving-financial-setbacks%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=faq-cardapr/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/fqmvKHlYsjRT7CbRmNjR2djNkpc=239"
             ><img
               src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Fmarketing%2FHeros%2Fask-fico-blog-post_290x150.jpg&t=1636392764&ymreqid=ed8b9e6a-da10-874f-1cce-7e000001bf00&sig=c1kjO_JO0DwBxLxTYKlgnA--~D"
               style="width: 290px !important"
           /></a>
-          <spacer size="20"></spacer>
-          <span style="color: #000000; font-size: 18px; font-weight: 600"
-            >Credit FAQS: Surviving a <br />
-            financial setback</span
-          >
-          <spacer size="10"></spacer>
+          <p class="text">
+            Credit FAQS: Surviving a <br />
+            financial setback
+          </p>
+        </columns>
+      </row>
+      <row>
+        <columns class="right-button">
           <a
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Fcredit-education%2Ffaq%2Fimproving-a-score%2Fsurviving-financial-setbacks%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=faq-cardapr/2/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/XGeuS1h5E1oALVnLn_P9PU3DTwQ=239"
-            ><p class="button">READ MORE</p></a
+            ><span class="button">READ MORE</span></a
           >
         </columns>
       </row>
@@ -87,7 +86,7 @@ subject: Newsletter
 
 <container>
   <row class="myFico_forum">
-    <columns>
+    <columns small="12" large="12">
       <row>
         <columns small="12" large="12" class="title">
           <spacer size="20"></spacer>
@@ -105,7 +104,12 @@ subject: Newsletter
         </columns>
       </row>
       <row>
-        <columns small="2" large="2" class="myFico_forum-left" style="padding: 0">
+        <columns
+          small="2"
+          large="2"
+          class="myFico_forum-left"
+          style="padding: 0"
+        >
           <spacer size="10"></spacer>
           <img
             src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Fmarketing%2FForums%2Fcredit-score-rising_520x520.png&t=1636486822&ymreqid=ed8b9e6a-da10-874f-1cbc-a90000014d00&sig=9nRrp4bo60CB8VqiBxUmBg--~D"
@@ -143,7 +147,12 @@ subject: Newsletter
         </columns>
       </row>
       <row>
-        <columns small="2" large="2" class="myFico_forum-left" style="padding: 0">
+        <columns
+          small="2"
+          large="2"
+          class="myFico_forum-left"
+          style="padding: 0"
+        >
           <spacer size="20"></spacer>
           <img
             src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Fmarketing%2FForums%2Fmortgage_520x520.png&t=1636486822&ymreqid=ed8b9e6a-da10-874f-1cbc-a90000014d00&sig=p2THvB8XRdXBLXLn5DruiA--~D"
@@ -177,7 +186,12 @@ subject: Newsletter
         </columns>
       </row>
       <row>
-        <columns small="2" large="2" class="myFico_forum-left" style="padding: 0">
+        <columns
+          small="2"
+          large="2"
+          class="myFico_forum-left"
+          style="padding: 0"
+        >
           <spacer size="20"></spacer>
           <img
             src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Fmarketing%2FForums%2Fcredit-card_520x520.png&t=1636486822&ymreqid=ed8b9e6a-da10-874f-1cbc-a90000014d00&sig=DqCVwu7suI4eGM2izmZKSg--~D"
@@ -249,9 +263,9 @@ subject: Newsletter
           "
         >
           <center>
-            <span style="font-size: 16px;">
-              <b>20% Discount on Scores and Reports</b> 
-              <br>
+            <span style="font-size: 16px">
+              <b>20% Discount on Scores and Reports</b>
+              <br />
               Save on credit reports + FICO® Scores from one, two, or all three
               bureaus.
             </span>
@@ -259,14 +273,24 @@ subject: Newsletter
         </columns>
       </row>
       <row>
-        <columns  small="12" large="12">
+        <columns small="12" large="12">
           <center>
-          <a
-            href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Flp%2Fsem080009%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=crosssell-ficoreport/2/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/_ktyDSt5DQHhYPwqAF78MTCVOYQ=239"
-          >
-            <spacer size="30"></spacer>
-            <span style="font-family: Helvetica, Arial, sans-serif; padding: 12px 18px; border: 1px solid #00609C; border-radius: 3px; color: #00609C;">Save on My Scores</span>
-          </a></center>
+            <a
+              href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Flp%2Fsem080009%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=crosssell-ficoreport/2/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/_ktyDSt5DQHhYPwqAF78MTCVOYQ=239"
+            >
+              <spacer size="30"></spacer>
+              <span
+                style="
+                  font-family: Helvetica, Arial, sans-serif;
+                  padding: 12px 18px;
+                  border: 1px solid #00609c;
+                  border-radius: 3px;
+                  color: #00609c;
+                "
+                >Save on My Scores</span
+              >
+            </a>
+          </center>
         </columns>
         <spacer size="60"></spacer>
       </row>
