fixed myfico discount styles

--- a/src/pages/myFico.html
+++ b/src/pages/myFico.html
@@ -151,7 +151,7 @@ subject: Newsletter
           small="2"
           large="2"
           class="myFico_forum-left"
-          style="padding: 0"
+          style="padding-bottom: 0"
         >
           <spacer size="20"></spacer>
           <img
@@ -159,8 +159,7 @@ subject: Newsletter
             style="width: 80px; margin-left: 20px"
           />
         </columns>
-        <columns small="10" large="10" class="myFico_forum-right">
-          <spacer size="43"></spacer>
+        <columns small="10" large="10" class="myFico_forum-right" style="padding-top: 30px;">
           <a
             href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fficoforums.myfico.com%2Ft5%2FMortgage-Loans%2FHelp-me-get-to-720-mortgage-middle-by-May-2022%2Fm-p%2F6416444%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=newsletter%26utm_content=forums-mortgagescore720/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/BqyDFylhO7Hn7SEHVqGqq2rmfkQ=239"
             class="header"
@@ -190,7 +189,7 @@ subject: Newsletter
           small="2"
           large="2"
           class="myFico_forum-left"
-          style="padding: 0"
+          style="padding-bottom: 0;"
         >
           <spacer size="20"></spacer>
           <img
@@ -232,67 +231,46 @@ subject: Newsletter
 
 <container>
   <row class="myFico_discount">
-    <columns style="padding: 0 !important">
+    <columns>
       <row class="discount_top">
         <columns
           small="12"
           large="12"
-          style="
-            padding: 0px;
-            background: #ffffff !important;
-            background-color: #ffffff !important;
-          "
         >
-          <a
-            href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Flp%2Fsem080009%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=crosssell-ficoreport/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/dJiNNzccIJLdr63ZBStLqtyt9DM=239"
-          >
-            <img
-              src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Feducation%2Fnewsletter%2Fficoreport_200x200.jpg&t=1636486822&ymreqid=ed8b9e6a-da10-874f-1cbc-a90000014d00&sig=TFa5ANEIjvZ79l0DDTZaQA--~D"
-              style="width: 200px; margin: 0 auto"
-          /></a>
+            <a
+              href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Flp%2Fsem080009%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=crosssell-ficoreport/1/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/dJiNNzccIJLdr63ZBStLqtyt9DM=239"
+            >
+              <center><img
+                src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fwww.myfico.com%2Fstatic%2Fimages%2Feducation%2Fnewsletter%2Fficoreport_200x200.jpg&t=1636486822&ymreqid=ed8b9e6a-da10-874f-1cbc-a90000014d00&sig=TFa5ANEIjvZ79l0DDTZaQA--~D"
+            /></center></a>
+          
         </columns>
       </row>
       <row class="discount_bottom">
         <columns
           small="12"
           large="12"
-          style="
-            padding: 0px;
-            background: #ffffff !important;
-            background-color: #ffffff !important;
-          "
         >
-          <center>
-            <span style="font-size: 16px">
+            <p>
               <b>20% Discount on Scores and Reports</b>
               <br />
               Save on credit reports + FICO® Scores from one, two, or all three
               bureaus.
-            </span>
-          </center>
+            </p>
         </columns>
       </row>
-      <row>
+      <row class="discount_button">
         <columns small="12" large="12">
           <center>
             <a
               href="https://46xfxfhn.r.us-west-2.awstrack.me/L0/https:%2F%2Fwww.myfico.com%2Flp%2Fsem080009%3Futm_source=pinpoint%26utm_medium=email%26utm_campaign=crosssell-ficoreport/2/02010000cjnvsmeu-l560cgvc-mdmh-na98-ug6t-p1n2a4bo72g0-000000/_ktyDSt5DQHhYPwqAF78MTCVOYQ=239"
             >
-              <spacer size="30"></spacer>
-              <span
-                style="
-                  font-family: Helvetica, Arial, sans-serif;
-                  padding: 12px 18px;
-                  border: 1px solid #00609c;
-                  border-radius: 3px;
-                  color: #00609c;
-                "
+              <span class="button"
                 >Save on My Scores</span
               >
             </a>
           </center>
         </columns>
-        <spacer size="60"></spacer>
       </row>
     </columns>
   </row>
