fixed boxes styles

--- a/src/pages/newegg.html
+++ b/src/pages/newegg.html
@@ -4,38 +4,53 @@ subject: promo
 ---
 
 <container>
-  <row class="newegg_daily-deal">
-    <columns small="12" large="12" class="daily-deal_inside">
-      <row class="top">
-        <columns>
-          <a
-            href="https://l.promo.newegg.com/rts/go2.aspx?h=424479&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
-            ><img
-              src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_01.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=6_1zUTsM8FYx6xmKWozC_A--~D" class="top_img"
-          /></a>
+  <row>
+    <columns
+      class="newegg_daily-deal"
+      style="background: #001723; background-color: #001723;"
+    >
+      <row class="newegg_daily-deal-top">
+        <columns small="12" large="12" class="daily-deal_inside-top">
+          <row class="top">
+            <columns>
+              <a
+                href="https://l.promo.newegg.com/rts/go2.aspx?h=424479&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
+                ><img
+                  src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_01.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=6_1zUTsM8FYx6xmKWozC_A--~D"
+                  class="top_img"
+              /></a>
+            </columns>
+          </row>
         </columns>
       </row>
-      <row class="bottom">
-        <columns style="padding: 0 !important">
-          <a
-            href="https://l.promo.newegg.com/rts/go2.aspx?h=424480&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
-            ><img
-              src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_02.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=7DmesvkDtaJUy9b5UwjSOg--~D" class="left_img"
-          /></a>
-        </columns>
-        <columns style="padding: 0 !important">
-          <a
-            href="https://l.promo.newegg.com/rts/go2.aspx?h=424481&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
-            ><img
-              src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_03.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=d0shqla0rNymK5U4JJkhvw--~D" class="left_img"
-          /></a>
-        </columns>
-        <columns style="padding: 0 !important">
-          <a
-            href="https://l.promo.newegg.com/rts/go2.aspx?h=424482&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
-            ><img
-              src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_04.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=PV8xjkgSEvdeSdhTpY3jMQ--~D" class="left_img"
-          /></a>
+      <row class="newegg_daily-deal-bottom">
+        <columns small="12" large="12" class="daily-deal_inside-bottom">
+          <row class="bottom">
+            <columns small="4" large="3" style="padding: 0 !important">
+              <a
+                href="https://l.promo.newegg.com/rts/go2.aspx?h=424480&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
+                ><img
+                  class="float-left daily-deal_left_img"
+                  src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_02.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=7DmesvkDtaJUy9b5UwjSOg--~D"
+              /></a>
+            </columns>
+            <columns small="4" large="4" style="padding: 0 !important">
+              <a
+                href="https://l.promo.newegg.com/rts/go2.aspx?h=424481&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
+                ><img
+                  class="daily-deal_middle_img"
+                  src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_03.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=d0shqla0rNymK5U4JJkhvw--~D"
+              /></a>
+            </columns>
+            <columns small="4" large="3" style="padding: 0 !important">
+              <a
+                href="https://l.promo.newegg.com/rts/go2.aspx?h=424482&tp=i-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx&x=cXVhbmRyZW15ZXJzQHlhaG9vLmNvbQ==%7ci-1NGB-Q7F-5lM-70eigc-2D-1kuFk-1c-70Xhy5-l6fN6j8cNE-1AwYkx%7c25955664%7c22156"
+                ><img
+                  class="float-right daily-deal_right_img"
+                  src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fpromotions.newegg.com%2FNEemail%2FOct-0-2021%2FUpgradeVictory_uwgx_15%2FResource%2Findex-img%2FSS_04.jpg&t=1636355731&ymreqid=ed8b9e6a-da10-874f-1c2d-930000019800&sig=PV8xjkgSEvdeSdhTpY3jMQ--~D"
+              /></a>
+            </columns>
+          </row>
         </columns>
       </row>
     </columns>
