--- a/src/pages/turbo-tax.html
+++ b/src/pages/turbo-tax.html
@@ -6,10 +6,9 @@ subject: Newsletter fall 2021
 <container>
   <row class="one-box">
     <columns class="hero" small="12" large="12" valign="middle">
-      <img style="height: 35px"
-        src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F5fb73961f5d16775376df1fe%2Foriginal.gif%3F1605843297&t=1637970491&ymreqid=ed8b9e6a-da10-874f-1c61-2d0002012c00&sig=opvyugotQGi2TaqgFOA8tQ--~D" />
       <a
-        href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f-2BXtkUu1fmoENfPqZwUcWmCrbx4MxG23WzLoMy8KP0QANuLJ2aI0VCsj-2BerZcoqzEWNLiFpSm3GpxbGtejBgOycmFilzgrBVXwJcz8vUSGiDlMf-2Bb8LurxZvSQ-2BxkLcO9-2FM1Rh-2BufAyQRrci8ooocTqAeRE8izjH45hy-2Bs6UAdrJygze_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuW7U0sde-2BhvYHmYb5bZleafcW8LcsCaPBKuoCCHCjEMR5mAc-2FhHOab5kh3oBJVM6DB50NzRcghiRLkBHUl5Emt-2BoDZIely7PxuHeJQd0BNv17cT4kqczmeiSXICbVakUF88xuuCBB5Q3Mw1566hD-2BavTZDzb9PMCIvnUem3CXlvtQ-3D-3D"><img
+        href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f-2BXtkUu1fmoENfPqZwUcWmCrbx4MxG23WzLoMy8KP0QANuLJ2aI0VCsj-2BerZcoqzEWNLiFpSm3GpxbGtejBgOycmFilzgrBVXwJcz8vUSGiDlMf-2Bb8LurxZvSQ-2BxkLcO9-2FM1Rh-2BufAyQRrci8ooocTqAeRE8izjH45hy-2Bs6UAdrJygze_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuW7U0sde-2BhvYHmYb5bZleafcW8LcsCaPBKuoCCHCjEMR5mAc-2FhHOab5kh3oBJVM6DB50NzRcghiRLkBHUl5Emt-2BoDZIely7PxuHeJQd0BNv17cT4kqczmeiSXICbVakUF88xuuCBB5Q3Mw1566hD-2BavTZDzb9PMCIvnUem3CXlvtQ-3D-3D">
+        <img
           style="width: 100%;"
           src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F6127c93f6088181263b1ac33%2Foriginal.jpg%3F1629997375&t=1635285952&ymreqid=ed8b9e6a-da10-874f-1c76-670000014500&sig=9bu2QunnyDVYzKe..MiQ9g--~D" /></a>
     </columns>
@@ -26,7 +25,7 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="two-boxs">
-    <columns small="6" large="6" valign="middle" class="box-one">
+    <columns large="6" valign="middle" class="box-one">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -52,7 +51,7 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="6" large="6" valign="middle" class="box-two">
+    <columns large="6" valign="middle" class="box-two">
       <row>
         <columns style="padding-bottom: 0 !important" valign="middle">
           <a
@@ -82,7 +81,7 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="three-boxs">
-    <columns small="3" large="3" valign="middle" class="sm-one">
+    <columns large="3" valign="middle" class="sm-one">
       <row>
         <columns style="padding-bottom: 0 !important">
           <a
@@ -107,7 +106,7 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="3" large="3" valign="middle" class="sm-two">
+    <columns large="3" valign="middle" class="sm-two">
       <row>
         <columns valign="middle" style="padding-bottom: 0 !important">
           <a
@@ -130,7 +129,7 @@ subject: Newsletter fall 2021
         </columns>
       </row>
     </columns>
-    <columns small="3" large="3" valign="middle" class="sm-three">
+    <columns large="3" valign="middle" class="sm-three">
       <row>
         <columns style="padding-bottom: 0 !important;">
           <a
@@ -161,18 +160,20 @@ subject: Newsletter fall 2021
 
 <container>
   <row class="long-box">
-    <columns valign="middle" style="padding-bottom: 35px">
-      <row>
-        <columns valign="middle" class="long-one" style="padding: 0 !important; width: 180px;">
+    <columns valign="middle" style="padding-bottom: 35px;">
+      <row style="background: #ffffff;
+      background-color: #ffffff;">
+        <columns small="4" valign="middle" class="long-one" style="padding: 0 !important; width: 180px;">
           <a
             href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv5OYazZUBlIPrFUsAqWMDhRVLHsXvyZC9GumpP4FD76c0swosD3m3tEB3Bz3RgpYJo765r1JdyPV3st5mrXMJZ4FGnOvxwsTSUWBFBZcvzLrg-3D-3DHJRD_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuW7i00nKe8dWR2rIIsa8iU4uOFeh4u3HXJPlnMMLc90oK8LJ25fbEHosX6Xs-2F1bIfZ8KdKmkW2A-2B5tNVbKLz9BrjeSFJGp0rCsrwzwpGv1XZlwL4O9fTNnajFv-2BoubMezUWx4QCg66-2F6xs9-2Ff9kDCDg1Uiu2jfVMDYYuC9WQLdw3w-3D-3D"><img
+              width="100%"
               src="https://ecp.yusercontent.com/mail?url=https%3A%2F%2Fappboy-images.com%2Fappboy%2Fcommunication%2Fassets%2Fimage_assets%2Fimages%2F6143cbe9bd89597f72376afc%2Foriginal.png%3F1631833064&t=1635699291&ymreqid=ed8b9e6a-da10-874f-1c58-1d0000010c00&sig=Snax6i1r6Kvc9hlkBJR3AA--~D"
               style="width: 194px" /></a>
         </columns>
-        <columns valign="middle" class="long-text" style="width: 373px;">
+        <columns small="7" valign="middle" class="long-text" style="width: 373px;">
           <p class="title">Explore our Unemployment Center</p>
           <p class="info">
-            Learn more about expanded unemployment benefits and<br />
+            Learn more about expanded unemployment benefits and
             Coronavirus relief.
             <a
               href="https://ablink.em1.turbotax.intuit.com/ls/click?upn=DdiPPBOsKXJgsBxHIqN9f8IemcG0Dsles-2FYVF4zdbv5OYazZUBlIPrFUsAqWMDhRVLHsXvyZC9GumpP4FD76c0swosD3m3tEB3Bz3RgpYJo765r1JdyPV3st5mrXMJZ4FGnOvxwsTSUWBFBZcvzLrg-3D-3DLptM_L39vlg5jsGr2lhzy0ayLpbI4xS3U29ark190PuQJCj0TrYMrdHL41O4x78Ercgpe-2Bgn1ar9ARjwrhcX6nX6yqIJshF9F8xcqwRLcyRkt-2BfIXYXeoGteiZyk0kFxQrqRT5Ua0xBuo6FK9XwQ44JS-2FKpjxrQnIsgB9OLDQ-2BkZsTAuap7YnZqo4MdMXv4KMkKKqM9mo0B9RlSpYSootwkOp0eL5D1lvZXM-2B-2B-2Bdx-2FvHiNNkRsKf-2FDI7mP1Jy516lxAepkSEIZAU2f-2FIWEaHWQVbkM2Sm76ZMbUriDck6eawQODt-2F4vFb5DBfwa77n42Z8fS18IUkgMrJR-2Fc1jTmOzLWpzEe2dzIx4aqFX7c4oiPf1ad0rcYyqH0OxeaPfYQXE6I-2FZnrGY-2FeE2-2FYXoZz71rW-2BfNhoHH17L8Wrp-2FBVfCv0gl6x-2BsLGP-2FwWbGFw10uPk1qtNUtV94kxL3e621O6eOgAoYgZM-2Bznwx0cHBrxpil4YmiezvCd-2BvVR9s4gH6q00VskX1AyNflyVcKlryEvAsdrKQXi3l3Ox4-2Bkd5U2oVHv8bU3soDNMQcfNkS-2Bqku7CnH018g3QdR2A4yEfGNoZb-2F-2FHXvNh4QPOCv-2Bpw4ps-2FwtIuUlwpeCpFyxm20fTyo5QaQehtZEq4GN2edp9Ndyu107ArOK5yz2RjpOpuCx5UxfaEMSz2JXcAzKy90sN7HHDjJsxd2Tn2juQMJl1ZCyUGDpUPvH0MkNpSJS42pm314-2BAsN0PWMwGQJ0EZkNxXNvdRSudfGloPdQBMSD5S0XKa8bXw-3D-3D">Discover
